src/test/run-pass/issue-9837.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

const C1: i32 = 0x12345678;
const C2: isize = C1 as i16 as isize;

enum E {
    V = C2
}

fn main() {
    assert_eq!(C2 as u64, E::V as u64);
}
